[package]
name = "camigo-helpers"
version = "0.0.1"
edition = "2018"

description = "Cache-friendly comparison, binary & sequential search. Helpers, infrequently updated."
categories = ["algorithms", "caching", "data-structures", "no-std", "text-processing"]

authors = ["Peter Kehl <peter.kehl@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/peter-kehl/camigo-helpers"

# TODO MSRV

[features]
# Keep features here sorted alphabetically
alloc = []

# TODO See if this comment shows up at docs.rs.
#
# Future-proofing if we need to handle types that use std.
std = ["alloc"]

[dependencies]
